--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "dom-gradient",
   "version": "1.0.0",
-  "description": "",
   "main": "code.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ernestostvil/dynamic-background-generator.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ernestostvil/dynamic-background-generator/issues"
+  },
+  "homepage": "https://github.com/ernestostvil/dynamic-background-generator#readme",
+  "description": ""
 }
